--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
+/* Note to self: justify-content centers things horizontally. align-items centers it vertically. */
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+    font-size: 4rem;
+    font-weight: 400;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h3 {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button {
+    padding: 5px 15px;
+    margin: 0 10px;
+    height: 25px;
+    background-color: #263646;
+    color: #eee;
+    border: none;
+    outline: none;
+    width: 75px;
+    border-radius: 2px;
 }
 
-.App-link {
-  color: #61dafb;
+.selector-area {
+    display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.selector {
+    margin: 0 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.selector-button-area {
+    display: flex;
+    align-items: center;
+}
+
+.selected-interval {
+    font-size: 2rem;
+    margin: 0 10px;
+}
+
+.timer-container {
+    border: 2px solid #263646;
+    margin-top: 40px;
+    border-radius: 25px;
+    width: 250px;
+    text-align: center;
+    padding: 10px;
+}
+
+.timer-display {
+    font-size: 2rem;
+}
+
+.timer-controls {
+    margin-top: 20px;
+    text-align: center;
 }
