--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,6 @@ button {
 
 .timer-container {
     border: 2px solid #263646;
-    margin-top: 40px;
     border-radius: 25px;
     width: 250px;
     text-align: center;
@@ -69,6 +68,7 @@ button {
 }
 
 .timer-controls {
+    margin-bottom: 40px;
     margin-top: 20px;
     text-align: center;
 }
