--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,112 @@
 /* Note to self: justify-content centers things horizontally. align-items centers it vertically. */
 
+
+/* Gray/green color scheme */
+/* :root {
+    --bodyColor: #222629;
+    --bigContainerColor: #474B4F;
+    --exteriorTextColor: #86C232;
+    --smallContainerColor: #6B6E70;
+    --interiorTextColor: #86C232;
+    --borderColor: black;
+    --textShadowColor: black;
+} */
+
+/* Shades of blue color scheme */
+
+:root {
+    --bodyColor: #31708E;
+    --bigContainerColor: #5085A5;
+    --exteriorTextColor: #F7F9FB;
+    --smallContainerColor: #8FC1E3;
+    --interiorTextColor: #F7F9FB;
+    --outerBorderColor: #F7F9FB;
+    --innerBorderColor: black;
+    --textShadowColor: black;
+}
+
+  body {
+    background-color: var(--bodyColor);
+  }
+
 .App {
+    background-color: var(--bigContainerColor);
+    margin: 10vh auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 80vh;
+    width: 90vh;
+    border: 1px solid var(--outerBorderColor);
+    border-radius: 20%;
 }
 
 h1 {
+    margin-top: 0;
+    color: var(--exteriorTextColor);
+    -webkit-text-stroke: 1px var(--textShadowColor);
     font-size: 4rem;
-    font-weight: 400;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+h2 {
+    color: var(--interiorTextColor);
+    -webkit-text-stroke: 1px var(--textShadowColor);
+    font-size: 3rem;
+    font-weight: 900;
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-family: Arial, Helvetica, sans-serif
+
 }
 
 h3 {
+    color: var(--exteriorTextColor);
+    -webkit-text-stroke: 1px var(--textShadowColor);
     text-align: center;
     font-size: 2rem;
-    font-weight: 400;
+    font-weight: 900;
     margin-top: 0;
     margin-bottom: 10px;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 button {
-    padding: 5px 15px;
+    background-color: var(--smallContainerColor);
+    color: var(--interiorTextColor);
+    -webkit-text-stroke: 1px var(--textShadowColor);
+    font-size: 1.5rem;
+    font-weight: 900;
+    padding: 20px;
     margin: 0 10px;
-    height: 25px;
-    background-color: #263646;
-    color: #eee;
-    border: none;
+    border: 1px solid var(--innerBorderColor);
     outline: none;
-    width: 75px;
-    border-radius: 2px;
+    border-radius: 5px;
+    line-height: 0;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 .timer-container {
-    border: 2px solid #263646;
+    background-color: var(--smallContainerColor);
+    border: 1px solid var(--innerBorderColor);
     border-radius: 25px;
     width: 250px;
     text-align: center;
-    padding: 10px;
+    padding: 50px;
 }
 
+span {
+    color: var(--interiorTextColor);
+    -webkit-text-stroke: 1px var(--textShadowColor);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+}
+
+
 .timer-display {
-    font-size: 2rem;
+    font-size: 4rem;
 }
 
 .timer-controls {
@@ -74,6 +138,10 @@ button {
 
 .selected-interval {
     font-size: 2rem;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0 10px;
+    color: var(--interiorTextColor);
+    -webkit-text-stroke: 1px var(--textShadowColor);
 }
 
